# aicortex

./: .gitignore  AGENTS.md  CONFIG_GUIDE.md  EXAMPLES.md  FEATURES.md  LICENSE-APACHE  LICENSE-MIT  NIM_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_FIX.md  README.md  README_CN.md  ROADMAP.md  USAGE_CN.md  eslint.config.js  index.html  package-lock.json  pyproject.toml  tsconfig.app.json  types.d.ts  vite.config.ts
docs/plans/: 2026-01-16-gui-model-key-config-design.md
roles/: default.md  programmer.md  shell.md  translate.md
src/aicortex/: __init__.py  __main__.py  agent.py  cli.py  function.py  llm.py  serve.py
src/aicortex/client/: __init__.py  azure_openai.py  claude.py  cohere.py  gemini.py  message.py  mod.py  model.py  openai.py  openai_compatible.py  stream.py
src/aicortex/config/: __init__.py  input.py  macro.py  mod.py  role.py  session.py
src/aicortex/rag/: __init__.py  mod.py  serde_vectors.py
src/aicortex/rag/splitter/: __init__.py  language.py  mod.py
src/aicortex/render/: __init__.py  markdown.py  mod.py  stream.py
src/aicortex/repl/: __init__.py  mod.py
src/aicortex/utils/: __init__.py  abort_signal.py  clipboard.py  command.py  crypto.py  html_to_md.py  input.py  loader.py  mod.py  path.py  render_prompt.py  request.py  spinner.py  variables.py
src/electron/: ipc-handlers.ts  pathResolver.ts  preload.cts  test.ts  tsconfig.json  types.ts
src/electron/libs/: claude-settings.ts  session-store.ts
src/ui/: App.tsx  index.css  types.ts
src/ui/components/: DecisionPanel.tsx  EventCard.tsx  PromptInput.tsx  Sidebar.tsx  StartSessionModal.tsx
src/ui/hooks/: useIPC.ts
src/ui/render/: markdown.tsx
src/ui/store/: useAppStore.ts
