[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicortex"
version = "0.1.0"
description = "All-in-one LLM CLI Tool - Python implementation"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.10"
keywords = ["llm", "cli", "ai", "chatbot", "openai", "claude", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "aiofiles>=23.0.0",
    "tiktoken>=0.5.0",
    "pygments>=2.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
rag = [
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
aicortex = "aicortex.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
