[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicortex"
version = "0.1.0"
description = "Unified AI Intelligence Hub - All-in-one LLM CLI Tool"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "AICortex Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # CLI & 输入
    "typer>=0.12.0",
    "questionary>=2.0.0",
    "prompt-toolkit>=3.0.0",

    # HTTP & 异步
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",

    # 数据序列化
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "orjson>=3.9.0",

    # 终端 & 渲染
    "rich>=13.7.0",
    "pygments>=2.17.0",
    "colorama>=0.4.6",

    # RAG & 向量
    "faiss-cpu>=1.7.4",
    "rank-bm25>=0.2.2",
    "numpy>=1.24.0",

    # 工具
    "python-dotenv>=1.0.0",
    "html2text>=2020.1.16",
    "cryptography>=41.0.0",
    "readchar>=4.0.0",
    "chardet>=5.2.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
aicortex = "aicortex.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
